--- a/magasin/magasin/magasin.csproj
+++ b/magasin/magasin/magasin.csproj
@@ -86,7 +86,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sql.cs" />
+    <Compile Include="Sql.cs" />
     <EmbeddedResource Include="frmAdmin.resx">
       <DependentUpon>frmAdmin.cs</DependentUpon>
     </EmbeddedResource>
