Interface Login refaite et rajout Panier sur la droite

--- a/magasin/magasin/magasin.csproj
+++ b/magasin/magasin/magasin.csproj
@@ -44,6 +44,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Messaging" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xaml" />
