--- a/magasin/magasin/magasin.csproj
+++ b/magasin/magasin/magasin.csproj
@@ -118,6 +118,9 @@
   <ItemGroup>
     <None Include="Resources\pitr-Sheep-icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icone_search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
